--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "@angular/animations": "~11.2.10",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
-    "@angular/core": "~11.2.10",
+    "@angular/core": "^11.2.11",
     "@angular/forms": "~11.2.10",
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "angular-fusioncharts": "^3.1.0",
+    "fusioncharts": "^3.16.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.9",
+    "@angular-devkit/build-angular": "^0.1102.10",
     "@angular/cli": "~11.2.9",
     "@angular/compiler-cli": "~11.2.10",
     "@types/jasmine": "~3.6.0",
