--- a/package.json
+++ b/package.json
@@ -1,34 +1,44 @@
 {
   "name": "covid-tracker",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
+  },
+  "engines": {
+    "node": "14.2.0",
+    "npm": "6.14.4"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.10",
+    "@angular/cli": "^11.2.10",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
+    "@angular/compiler-cli": "^11.2.11",
     "@angular/core": "^11.2.11",
     "@angular/forms": "~11.2.10",
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
     "angular-fusioncharts": "^3.1.0",
+    "express": "^4.17.1",
     "fusioncharts": "^3.16.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.1.5",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.10",
-    "@angular/cli": "~11.2.9",
-    "@angular/compiler-cli": "~11.2.10",
+    "@angular/cli": "^11.2.10",
+    "@angular/compiler-cli": "^11.2.11",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
